# Juicy-Fine-Minimizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD
docs/: Doxyfile.in
resources/: Aulas_Gravadas.url  Copa APA.url  Estilos_Commits.url  brainstorm_here.txt  ex_instance.template  instances_optimal_values.txt
src/: CMakeLists.txt  benchmark.csv  benchmark_script.ps1  copa_apa_costs.txt  main.cpp
src/classes/: Benchmarker.cpp  DoublyLinkedList.cpp  Globals.cpp  Instance.cpp  NeighborhoodOperations.cpp  Solution.cpp
src/headers/: Benchmarker.hpp  DoublyLinkedList.hpp  Globals.hpp  Instance.hpp  NeighborhoodOperations.hpp  Solution.hpp
src/instances/: ex_instance
tests/: CMakeLists.txt  dll_test.cpp  instance_test.cpp  no_test.cpp  solution_test.cpp
